istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: todo-virtualservice

spec:
  hosts:
  - "*"

  gateways:
  - todo-gateway

  http:
  - match:
    - uri:
        prefix: /

    route:
    - destination:
        host: frontend-service
        port:
          number: 5173
